--- a/ExampleWebViewProxyApp/ExampleWebViewProxyApp/WebViewContent.html
+++ b/ExampleWebViewProxyApp/ExampleWebViewProxyApp/WebViewContent.html
@@ -4,4 +4,6 @@
 </head><body>
     HI
     <img src="http://foo/path/to/image.png" />
+    <img src="http://google_logo/image.png" />
+    <img src="http://google_logo_bw/image.png" />
 </body></html>
