--- a/ExampleWebViewProxyApp/ExampleWebViewProxyApp/WebViewContent.html
+++ b/ExampleWebViewProxyApp/ExampleWebViewProxyApp/WebViewContent.html
@@ -3,7 +3,6 @@
 
 </head><body>
     HI
-    <img src="http://foo/path/to/image2.png" />
-    <img src="http://google_logo/image2.png" />
-    <img src="http://google_logo_bw/image2.png" />
+    <img src="http://google_logo/image.png" />
+    <img src="http://google_logo_bw/image.png" />
 </body></html>
