update docs and example app to use new api with both request and response passed in to the handler. Also, update example app to request two images - one remote and one remote - and render two versions of each image - one original and one converted to black and white on the client

--- a/ExampleWebViewProxyApp/ExampleWebViewProxyApp/WebViewContent.html
+++ b/ExampleWebViewProxyApp/ExampleWebViewProxyApp/WebViewContent.html
@@ -2,7 +2,8 @@
 <html><head>
 
 </head><body>
-    HI
-    <img src="http://google_logo/image.png" />
-    <img src="http://google_logo_bw/image.png" />
+    <img src="http://intercept/Galaxy.png" />
+    <img src="http://intercept_black_and_white/Galaxy.png" />
+    <img src="https://www.google.com/images/srpr/logo3w.png" />
+    <img src="https://black_and_white.google.com/images/srpr/logo3w.png" />
 </body></html>
