add example code for proxying requests to remote servers

--- a/ExampleWebViewProxyApp/ExampleWebViewProxyApp/WebViewContent.html
+++ b/ExampleWebViewProxyApp/ExampleWebViewProxyApp/WebViewContent.html
@@ -6,4 +6,6 @@
     <img src="http://intercept_black_and_white/Galaxy.png" />
     <img src="https://www.google.com/images/srpr/logo3w.png" />
     <img src="https://black_and_white.google.com/images/srpr/logo3w.png" />
+    
+    <iframe src="http://example.proxy"></iframe>
 </body></html>
